# Jacks-repo

./: .env.example  .gitignore  .~lock.signal_vs_trade_analysis.xlsx#  AGENT_LEARNING_LOOP_README.md  BACKTEST_README.md  CLAUDE.md  OLLAMA_SETUP.md  README.md  agent_learning_loop.py  agent_memory.db  agent_memory.db-shm  agent_memory.db-wal  agent_memory.py  ai_agent.py  ai_pro.py  ai_pro_dashboard_v3.html  ai_pro_trade_log.json  ai_thoughts.jsonl  backtest.py  backtest_AUDUSD_20260412_172833.json  backtest_all_pairs.py  check_backtest_dates.py  check_connection.py  check_raw.py  cleanup_html.py  fix_dashboard.ps1  index.html  pyproject.toml  replace_html.py  requirements-backtest.txt  requirements-llm.txt  requirements.md  requirements.txt  restore_dashboard.ps1  run.ps1  signal_vs_trade_analysis.xlsx  test_single_backtest.py  test_strategy_validation.py  trade_memory.db  verify_connections.py  (+1 more)
.claude/: settings.local.json
.github/workflows/: ci.yml
core/: mt5_config.py  mt5_connection.py  server.py
core/css/: dashboard.css
core/js/: agents.js  dashboard.js  memory-panel.js
odl/: ai_pro_backup.py  backtest.py  backtest_all_pairs.py  test_backtest_management.py  trade_memory.py
scripts/: preflight.py  serve.py  setup_ollama.ps1
tests/: conftest.py  test_agent_bots.py  test_agent_learning_loop.py  test_backtest_date_range.py  test_backtest_realism_gates.py  test_execution_margin_breaker.py  test_poc_filter_parity.py
